--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,10 +34,10 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #d6d6d6,
+  secondary:  #053e55,
   danger:     #f53d3d,
-  light:      #f4f4f4,
+  light:      #025a6c,
   dark:       #222
 );
 
